# ynobadges2

./: .gitignore  .taplo.toml  Cargo.toml  options.toml  schema.json
badges/100/2kki/: seesaw_critter_village.toml
badges/117/2kki/: rgb_passage.toml
badges/145/2kki/: vista_blood_rose_canal.toml
badges/20/2kki/: star_planetarium.toml
badges/210/2kki/: amoeba_maze_end.toml  ch_visit_water_worlds.toml  chainsaw_overwork.toml  crossing_singing_fox.toml  lotus_park_vm_cake.toml  menu_theme_91.toml  urotsuki_statue_olympic.toml  visit_abyss.toml  visit_acid_sun_plain.toml  visit_beyond_2kki.toml  visit_calico_forest.toml  visit_dazzling_garden.toml  visit_faraway_lands.toml  visit_hemlock_lab.toml  visit_pit_to_hell.toml  visit_satellite_space.toml  visit_start_cubes.toml
badges/210/if/: effect_primary_colors.toml
badges/210/loveyou/: aitsuki_trenchcoat.toml  visit_crimson_dunes.toml
badges/210/oversomnia/: outback_roads_pool.toml
badges/211/2kki/: block_person.toml  fliperama_hall_basement.toml  hemlock_lab_girl.toml  (+9 more)
crates/compiler/: Cargo.toml
crates/compiler/src/: collect.rs  main.rs  write.rs
crates/compiler/src/dsl/: mod.rs
crates/compiler/src/dsl/conditions/: mod.rs  parser.rs  tests.rs  token.rs
crates/compiler/src/dsl/requirements/: mod.rs  token.rs
crates/compiler/src/format/config/: mod.rs
crates/compiler/src/format/input/: mod.rs
crates/compiler/src/format/output/: mod.rs
crates/compiler/src/io/: collect.rs  git.rs  mod.rs  write.rs
crates/compiler/src/io/write/: badges.rs  conditions.rs  lang.rs  mod.rs
scripts/: generator.ts
(+26 files in other folders)
