[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
git2 = "0.20.4"
indexmap = { version = "2.14.0", features = ["serde"] }
log = "0.4.29"
logos = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_with = "3.18.0"
tokio = { version = "1.51.1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "1.1.2"
tracing-subscriber = "0.3.23"
